style.css
* {
    padding: 0;
    margin: 0;
}

#nav-bar {
    /* WIP */
}

#hero {
    /* WIP */
}

#slogan-main {
    /* WIP */
}

#slogan-sub {
    /* WIP */
}

#avantages {
    /* WIP */
}

#produits {
    /* WIP */
}

#services {
    /* WIP */
}

#temoignages {
    /* WIP */
}

#footer-content {
    /* WIP */
}

#footer-legals {
    /* WIP */
}

.container {
    max-width: 1000px;
    margin: auto;
}

.row {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 8px;
}

.column {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
}

.spaced {
    justify-content: space-between;
}

.wrap {
    flex-wrap: wrap;
}

.menu {
    /* WIP */
}

.cta {
    /* WIP */
}

.section-title {
    /* WIP */
}

.section-slogan {
    /* WIP */
}

.logo {
    /* WIP */
}

.company {
    /* WIP */
}

